AUX_DIST_GEN =                          \
        $(ac_aux_dir)/install-sh        \
        $(ac_aux_dir)/missing

EXTRA_DIST=                             \
        $(AUX_DIST_GEN)                 

# doomdocsdir = ${docdir}/../${PROGRAM_PREFIX}doom

MAINTAINERCLEANFILES =  $(AUX_DIST_GEN)

SUBDIRS=textscreen midiproc opl pcsound data src

DIST_SUBDIRS=$(SUBDIRS)
