add_copy_target(gus-patches SOURCE
    acbass.pat
    accordn.pat
    acguitar.pat
    acpiano.pat
    agogo.pat
    agogohi.pat
    agogolo.pat
    altosax.pat
    applause.pat
    atmosphr.pat
    aurora.pat
    bagpipes.pat
    banjo.pat
    barisax.pat
    basslead.pat
    bassoon.pat
    belltree.pat
    blank.pat
    bongohi.pat
    bongolo.pat
    bottle.pat
    bowglass.pat
    britepno.pat
    c550kc_1.pat
    c550sn_6.pat
    c550sn10.pat
    c550vibs.pat
    cabasa.pat
    calliope.pat
    carillon.pat
    castinet.pat
    celeste.pat
    cello.pat
    charang.pat
    chiflead.pat
    choir.pat
    church.pat
    claps.pat
    clarinet.pat
    clave.pat
    clavinet.pat
    cleangtr.pat
    concrtna.pat
    congahi1.pat
    congahi2.pat
    congalo.pat
    contraba.pat
    cowbell.pat
    crystal.pat
    cuica1.pat
    cuica2.pat
    cymbell.pat
    cymchina.pat
    cymcrsh1.pat
    cymcrsh2.pat
    cymride1.pat
    cymride2.pat
    cymsplsh.pat
    dgguspat.txt
    distgtr.pat
    doo.pat
    echovox.pat
    englhorn.pat
    epiano1.pat
    epiano2.pat
    fantasia.pat
    fiddle.pat
    flute.pat
    fngrbass.pat
    frenchrn.pat
    freshair.pat
    fretless.pat
    fx-blow.pat
    fx-fret.pat
    ghostie.pat
    glocken.pat
    gtrharm.pat
    guiro1.pat
    guiro2.pat
    halopad.pat
    harmonca.pat
    harp.pat
    helicptr.pat
    highq.pat
    hihatcl.pat
    hihatop.pat
    hihatpd.pat
    hitbrass.pat
    homeorg.pat
    honky.pat
    hrpschrd.pat
    jazzgtr.pat
    jingles.pat
    jungle.pat
    kalimba.pat
    kick1.pat
    kick2.pat
    koto.pat
    lead5th.pat
    maracas.pat
    marcato.pat
    marimba.pat
    metalpad.pat
    metbell.pat
    metclick.pat
    musicbox.pat
    mutegtr.pat
    mutetrum.pat
    nyguitar.pat
    oboe.pat
    ocarina.pat
    odguitar.pat
    orchhit.pat
    percorg.pat
    piccolo.pat
    pickbass.pat
    pistol.pat
    pizzcato.pat
    polysyn.pat
    recorder.pat
    reedorg.pat
    revcym.pat
    ringwhsl.pat
    rockorg.pat
    santur.pat
    sawwave.pat
    scratch1.pat
    scratch2.pat
    seashore.pat
    shakazul.pat
    shaker.pat
    shamisen.pat
    shannai.pat
    sitar.pat
    slap.pat
    slapbas1.pat
    slapbas2.pat
    slowstr.pat
    snare1.pat
    snare2.pat
    soundtrk.pat
    sprnosax.pat
    sqrclick.pat
    sqrwave.pat
    startrak.pat
    steeldrm.pat
    stickrim.pat
    sticks.pat
    surdo1.pat
    surdo2.pat
    sweeper.pat
    synbass1.pat
    synbass2.pat
    synbras1.pat
    synbras2.pat
    synpiano.pat
    synstr1.pat
    synstr2.pat
    syntom.pat
    taiko.pat
    tamborin.pat
    telephon.pat
    tenorsax.pat
    timbaleh.pat
    timbalel.pat
    timpani.pat
    tomhi1.pat
    tomhi2.pat
    tomlo1.pat
    tomlo2.pat
    tommid1.pat
    tommid2.pat
    toms.pat
    tremstr.pat
    triangl1.pat
    triangl2.pat
    trombone.pat
    trumpet.pat
    tuba.pat
    tubebell.pat
    unicorn.pat
    vibes.pat
    vibslap.pat
    viola.pat
    violin.pat
    voices.pat
    voxlead.pat
    warmpad.pat
    whistle.pat
    whistle1.pat
    whistle2.pat
    woodblk.pat
    woodblk1.pat
    woodblk2.pat
    woodflut.pat
    xylophon.pat
)

foreach(MODULE ${COMPILE_MODULES})
    install(FILES $<GENEX_EVAL:$<TARGET_PROPERTY:gus-patches,OUT_FILES>>
        DESTINATION $<IF:$<OR:$<BOOL:${WIN32}>,$<BOOL:${BUILD_PORTABLE}>>,base,${CMAKE_INSTALL_DATADIR}/${PROGRAM_PREFIX}${MODULE}>/gus_patches
        COMPONENT "${MODULE}"
    )
endforeach()
